2005-03-17  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Setting
	the authentication mechanism parameter in camel url.
	
	* lib/e2k-autoconfig.c (get_ctx_auth_handler): Initializing saw_ntlm
	and saw_basic flags and setting saw ntlm if the response header begins
	with "NTLM ".
	(validate): Setting the is_ntlm flag if the user is authenticated.	

2005-03-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* docs/reference/Makefile.am : Link to krb5 libs as well
	* storage/Makefile.am : Similar
	Fixes a build break on SuSE machines.

2005-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	Set the state file path and load it. Fixes bug #73498.
	(transfer_messages_to): Updated to use journal_append()
	(refresh_info): Replay the journal here. Fixes bug #72968.
	
	* camel/camel-exchange-journal.c (exchange_entry_play_transfer):
	Removed (not used).
	(camel_exchange_journal_transfer): Removed.
	(exchange_entry_play_append): restore back the message info from the
	journal cache to the real cache.

2005-03-16  Sarfraaz Ahmed <asarfraaz@novell.com>

        * camel/camel-exchange-store.c (construct): Move back the stub creation
        code to exchange_connect and invoke connect to fix the timing issue.
        (exchange_connect) : Create a stub if it already not created.
        (exchange_get_folder) (exchange_get_trash) (exchange_get_folder_info) :
        Check if stub is created, if not then create it.
        Fixes #73673

2005-03-15 Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                
        * addressbook/e-book-backend-exchange.c
        (e_book_backend_exchange_create_contact)
        (e_book_backend_exchange_modify_contact)
        (e_book_backend_exchange_remove_contacts) :
        Make sure new or modified objects are added
        to cache and deleted ones are actually deleted